--- a/ch6/g2o_curve_fitting/CMakeLists.txt
+++ b/ch6/g2o_curve_fitting/CMakeLists.txt
@@ -1,26 +1,27 @@
-cmake_minimum_required( VERSION 2.8 )
-project( g2o_curve_fitting )
+cmake_minimum_required(VERSION 2.8)
+project(ch6)
 
-set( CMAKE_BUILD_TYPE "Release" )
-set( CMAKE_CXX_FLAGS "-std=c++11 -O3" )
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_CXX_FLAGS "-std=c++14 -O3")
 
-# 添加cmake模块以使用ceres库
-list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )
-
-# 寻找G2O
-find_package( G2O REQUIRED )
-include_directories( 
-    ${G2O_INCLUDE_DIRS}
-    "/usr/include/eigen3"
-)
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 # OpenCV
-find_package( OpenCV REQUIRED )
-include_directories( ${OpenCV_DIRS} )
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable( curve_fitting main.cpp )
-# 与G2O和OpenCV链接
-target_link_libraries( curve_fitting 
-    ${OpenCV_LIBS}
-    g2o_core g2o_stuff
-)
+# Ceres
+find_package(Ceres REQUIRED)
+include_directories(${CERES_INCLUDE_DIRS})
+
+# g2o
+find_package(G2O REQUIRED)
+include_directories(${G2O_INCLUDE_DIRS})
+
+# Eigen
+include_directories("/usr/include/eigen3")
+
+
+
+add_executable(g2oCurveFitting g2oCurveFitting.cpp)
+target_link_libraries(g2oCurveFitting ${OpenCV_LIBS} ${G2O_CORE_LIBRARY} ${G2O_STUFF_LIBRARY})
